# OpenGLPro

./: CMakeLists.txt  glad.c  main.cpp
application/: Application.cpp  Application.h  CMakeLists.txt
assets/shaders/: fragment.glsl  vertex.glsl
glFramework/: shader.cpp  shader.h
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
